--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -1,18 +1,21 @@
-name:             xmms2-client
-version:          0.0.1.0
-cabal-version:    >= 1.2
-license:          OtherLicense
-license-file:     COPYING
-author:           Oleg Belozeorov
-synopsis:         XMMS2 client development library
-build-type:       Simple
-extra-tmp-files:  config.status, config.log,
-                  xmms2-client.buildinfo, C2HS.hs
+name:               xmms2-client
+version:            0.0.1.0
+cabal-version:      >= 1.2
+license:            OtherLicense
+license-file:       COPYING
+author:             Oleg Belozeorov
+synopsis:           XMMS2 client development library
+build-type:         Simple
+extra-source-files: src/XMMS2/Client/xmms2hs-client.h
+extra-tmp-files:    config.status, config.log,
+                    xmms2-client.buildinfo, C2HS.hs
   
 library
   exposed-modules:		XMMS2.Client.Value, XMMS2.Client.Result,
                         XMMS2.Client.Connection, XMMS2.Client.Playback
   other-modules:		C2HS
+  c-sources:			src/XMMS2/Client/xmms2hs-client.c
+  include-dirs:			src/XMMS2/Client
   build-depends:		base, haskell98
   build-tools:			c2hs
   hs-source-dirs:       ., src
