--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -12,8 +12,9 @@ extra-tmp-files:    config.status, config.log,
   
 library
   exposed-modules:		XMMS2.Client.Value, XMMS2.Client.Result,
-                        XMMS2.Client.Connection, XMMS2.Client.Playback
-  other-modules:		C2HS
+                        XMMS2.Client.Connection, XMMS2.Client.Playback,
+                        XMMS2.Client.Playlist
+  other-modules:		C2HS, XMMS2.Utils
   c-sources:			src/XMMS2/Client/xmms2hs-client.c
   include-dirs:			src/XMMS2/Client
   build-depends:		base, haskell98
