* don't ref "owned" objects   Keep a reference to the owner along with them instead.

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -20,4 +20,5 @@ library
   build-depends:		base, haskell98
   build-tools:			c2hs
   hs-source-dirs:       ., src
-  extensions:           ForeignFunctionInterface
+  extensions:           ForeignFunctionInterface,
+                        ExistentialQuantification
