* use UTF8 strings for communication with XMMS2

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -17,7 +17,7 @@ library
   other-modules:		C2HS, XMMS2.Utils
   c-sources:			src/XMMS2/Client/xmms2hs-client.c
   include-dirs:			src/XMMS2/Client
-  build-depends:		base, haskell98
+  build-depends:		base, haskell98, utf8-string
   build-tools:			c2hs
   hs-source-dirs:       ., src
   extensions:           ForeignFunctionInterface,
