--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -13,11 +13,12 @@ extra-tmp-files:    config.status, config.log,
 library
   exposed-modules:		XMMS2.Client.Value, XMMS2.Client.Result,
                         XMMS2.Client.Connection, XMMS2.Client.Playback,
-                        XMMS2.Client.Playlist, XMMS2.Client.Medialib
+                        XMMS2.Client.Playlist, XMMS2.Client.Medialib,
+                        XMMS2.Client.Monad.Monad
   other-modules:		C2HS, XMMS2.Utils
   c-sources:			src/XMMS2/Client/xmms2hs-client.c
   include-dirs:			src/XMMS2/Client
-  build-depends:		base, haskell98, utf8-string
+  build-depends:		base, haskell98, utf8-string, mtl
   build-tools:			c2hs
   hs-source-dirs:       ., src
   extensions:           ForeignFunctionInterface,
