--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -22,9 +22,13 @@ extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs
 
 library
-  exposed-modules:	XMMS2.Client.Value, XMMS2.Client.Result,
-                    XMMS2.Client.Connection, XMMS2.Client.Playback,
-                    XMMS2.Client.Playlist, XMMS2.Client.Medialib,
+  exposed-modules:	XMMS2.Client.Value,
+                    XMMS2.Client.Result,
+                    XMMS2.Client.Connection,
+                    XMMS2.Client.Coll,
+                    XMMS2.Client.Playback,
+                    XMMS2.Client.Playlist,
+                    XMMS2.Client.Medialib,
                     XMMS2.Client.Monad, 
                     XMMS2.Client.Monad.Monad,
                     XMMS2.Client.Monad.Value,
@@ -32,8 +36,11 @@ library
                     XMMS2.Client.Monad.Connection, 
                     XMMS2.Client.Monad.Playlist,
                     XMMS2.Client.Monad.Playback,
-                    XMMS2.Client.Monad.Medialib
-  other-modules:    C2HS, XMMS2.Utils
+                    XMMS2.Client.Monad.Medialib,
+                    XMMS2.Client.Monad.Coll
+  other-modules:    C2HS,
+                    XMMS2.Utils,
+                    XMMS2.Client.CollBase
   c-sources:		src/XMMS2/Client/xmms2hs-client.c
   include-dirs:		src/XMMS2/Client
   build-depends:	base, haskell98, utf8-string, mtl, containers
