* moved XMMS2.Client.Monad.* common utils to a dedicated module

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -30,6 +30,7 @@ library
                     XMMS2.Client.Playlist,
                     XMMS2.Client.Medialib,
                     XMMS2.Client.Monad, 
+                    XMMS2.Client.Monad.Utils,
                     XMMS2.Client.Monad.Monad,
                     XMMS2.Client.Monad.Value,
                     XMMS2.Client.Monad.Result,
