--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -22,7 +22,8 @@ extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs
 
 library
-  exposed-modules:	XMMS2.Client.Value,
+  exposed-modules:	XMMS2.Client.CollBase,
+                    XMMS2.Client.Value,
                     XMMS2.Client.Result,
                     XMMS2.Client.Connection,
                     XMMS2.Client.Coll,
@@ -40,8 +41,7 @@ library
                     XMMS2.Client.Monad.Medialib,
                     XMMS2.Client.Monad.Coll
   other-modules:    C2HS,
-                    XMMS2.Utils,
-                    XMMS2.Client.CollBase
+                    XMMS2.Utils
   c-sources:		src/XMMS2/Client/xmms2hs-client.c
   include-dirs:		src/XMMS2/Client
   build-depends:	base, haskell98, utf8-string, mtl, containers
