* started error handling refactor

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -22,7 +22,9 @@ extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs
 
 library
-  exposed-modules:	XMMS2.Client.CollBase,
+  exposed-modules:	XMMS2.Client.ValueBase,
+                    XMMS2.Client.Exception,
+                    XMMS2.Client.CollBase,
                     XMMS2.Client.Value,
                     XMMS2.Client.Result,
                     XMMS2.Client.Connection,
@@ -30,7 +32,7 @@ library
                     XMMS2.Client.Playback,
                     XMMS2.Client.Playlist,
                     XMMS2.Client.Medialib,
-                    XMMS2.Client.Monad, 
+                    XMMS2.Client.Monad,
                     XMMS2.Client.Monad.Utils,
                     XMMS2.Client.Monad.Monad,
                     XMMS2.Client.Monad.Value,
@@ -49,4 +51,6 @@ library
   hs-source-dirs:   ., src
   extensions:       ForeignFunctionInterface,
                     ExistentialQuantification,
-                    TypeSynonymInstances
+                    TypeSynonymInstances,
+                    DeriveDataTypeable,
+                    FlexibleInstances
