--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -22,7 +22,8 @@ extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs
 
 library
-  exposed-modules:	XMMS2.Client.ValueBase,
+  exposed-modules:	Control.Monad.Exception,
+                    XMMS2.Client.ValueBase,
                     XMMS2.Client.Exception,
                     XMMS2.Client.CollBase,
                     XMMS2.Client.Value,
