* generalising the monadic iface

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -54,4 +54,7 @@ library
                     ExistentialQuantification,
                     TypeSynonymInstances,
                     DeriveDataTypeable,
-                    FlexibleInstances
+                    FlexibleInstances,
+                    NoMonomorphismRestriction,
+                    MultiParamTypeClasses,
+                    FunctionalDependencies
