* divide Values into mutable and immutable

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -59,4 +59,7 @@ library
                     FlexibleInstances,
                     NoMonomorphismRestriction,
                     MultiParamTypeClasses,
-                    FunctionalDependencies
+                    FunctionalDependencies,
+                    EmptyDataDecls,
+                    FlexibleContexts,
+                    ScopedTypeVariables
