* ValueClass instances for [a] and String overlap

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -62,4 +62,5 @@ library
                     FunctionalDependencies,
                     EmptyDataDecls,
                     FlexibleContexts,
-                    ScopedTypeVariables
+                    ScopedTypeVariables,
+                    OverlappingInstances
