--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -3,7 +3,7 @@ version:            0.0.1.0
 
 author:             Oleg Belozeorov
 maintainer:         Oleg Belozeorov <upwawet@gmail.com>
-copyright:          © 2009 Oleg Belozeorov
+copyright:          © 2009-2010 Oleg Belozeorov
 license:            OtherLicense
 license-file:       COPYING
 
