* a great renewal growls at hand ©

--- a/.hgignore
+++ b/.hgignore
@@ -1,29 +1,16 @@
 ~$
+(^|/)\.*\#
+^\+\+xhg-log-edit$
+\.orig$
 autom4te\.cache
 dist/
 \.buildinfo$
 config\.status$
 config\.log$
+(^|/)Makefile$
 C2HS\.hs$
-^\+\+xhg-log-edit$
+^client.*/tests/Test[0-9]*$
 \.hi$
 \.o$
-^client/tests/Test1$
-\.orig$
-(^|/)\.*\#
-^client-glib/tests/Test1$
-^client/src/XMMS2/Makefile$
-^client/src/XMMS2/Client/Makefile$
-^client/src/Makefile$
-^client/Makefile$
-^client/tests/Test2$
-^client/src/XMMS2/Client/Monad/Makefile$
-^client/tests/Test3$
-^client/src/Control/Monad/Makefile$
-^client/src/Control/Makefile$
-^client/tests/Test4$
-^client-glib/src/XMMS2/Makefile$
-^client-glib/src/XMMS2/Client/Makefile$
-^client-glib/src/Makefile$
-^client-glib/Makefile$
-^client/tests/Test5$
+
+
