--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -15,7 +15,7 @@ description:
   clients in Haskell. It contains (nearly) 1-to-1 bindings to the XMMS2
   client API and a higher level monadic interface.
 
-cabal-version:      >= 1.2  
+cabal-version:      >= 1.2
 build-type:         Simple
 extra-source-files: src/XMMS2/Client/xmms2hs-client.h
 extra-tmp-files:    config.status, config.log,
@@ -23,7 +23,8 @@ extra-tmp-files:    config.status, config.log,
 
 library
   exposed-modules:  Control.Monad.ToIO,
-                    XMMS2.Client.ValueBase,
+                    XMMS2.Client.Bindings.Types,
+                    XMMS2.Client.Bindings.Types.Value,
                     XMMS2.Client.Exception,
                     XMMS2.Client.CollBase,
                     XMMS2.Client.Value,
@@ -40,7 +41,7 @@ library
                     XMMS2.Client.Monad.XMMS,
                     XMMS2.Client.Monad.Value,
                     XMMS2.Client.Monad.Result,
-                    XMMS2.Client.Monad.Connection, 
+                    XMMS2.Client.Monad.Connection,
                     XMMS2.Client.Monad.Playlist,
                     XMMS2.Client.Monad.Playback,
                     XMMS2.Client.Monad.Medialib,
