--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -25,8 +25,8 @@ library
   exposed-modules:  Control.Monad.ToIO,
                     XMMS2.Client.Bindings.Types,
                     XMMS2.Client.Bindings.Types.Value,
+                    XMMS2.Client.Bindings.Types.Coll,
                     XMMS2.Client.Exception,
-                    XMMS2.Client.CollBase,
                     XMMS2.Client.Value,
                     XMMS2.Client.Result,
                     XMMS2.Client.Connection,
