--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -26,6 +26,7 @@ library
                     XMMS2.Client.Bindings.Types,
                     XMMS2.Client.Bindings.Types.Value,
                     XMMS2.Client.Bindings.Types.Coll,
+                    XMMS2.Client.Bindings.Types.Bin,
                     XMMS2.Client.Exception,
                     XMMS2.Client.Value,
                     XMMS2.Client.Result,
