* once more: tons of changes

--- a/client/configure.ac
+++ b/client/configure.ac
@@ -19,6 +19,7 @@ AC_CONFIG_FILES(xmms2-client.buildinfo
                 src/Control/Monad/Makefile
 				src/XMMS2/Makefile
 				src/XMMS2/Client/Makefile
+                src/XMMS2/Client/Types/Makefile
                 src/XMMS2/Client/Bindings/Makefile
                 src/XMMS2/Client/Bindings/Types/Makefile
 				src/XMMS2/Client/Monad/Makefile)
