--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -30,7 +30,12 @@ library
                     XMMS2.Client.Bindings.Types.List,
                     XMMS2.Client.Bindings.Types.Dict,
                     XMMS2.Client.Exception,
-                    XMMS2.Client.Value,
+                    XMMS2.Client.Types,
+                    XMMS2.Client.Types.Value,
+                    XMMS2.Client.Types.List,
+                    XMMS2.Client.Types.Dict,
+                    XMMS2.Client.Types.Property,
+                    XMMS2.Client.Types.Data,
                     XMMS2.Client.Result,
                     XMMS2.Client.Connection,
                     XMMS2.Client.Coll,
