* moved all low-level bindings to Bindings

--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -29,6 +29,13 @@ library
                     XMMS2.Client.Bindings.Types.Bin,
                     XMMS2.Client.Bindings.Types.List,
                     XMMS2.Client.Bindings.Types.Dict,
+                    XMMS2.Client.Bindings.Result,
+                    XMMS2.Client.Bindings.Connection,
+                    XMMS2.Client.Bindings.Coll,
+                    XMMS2.Client.Bindings.Playback,
+                    XMMS2.Client.Bindings.Playlist,
+                    XMMS2.Client.Bindings.Medialib,
+                    XMMS2.Client.Bindings.Stats,
                     XMMS2.Client.Exception,
                     XMMS2.Client.Types,
                     XMMS2.Client.Types.Value,
@@ -37,7 +44,6 @@ library
                     XMMS2.Client.Types.Property,
                     XMMS2.Client.Types.Data,
                     XMMS2.Client.Result,
-                    XMMS2.Client.Connection,
                     XMMS2.Client.Coll,
                     XMMS2.Client.Playback,
                     XMMS2.Client.Playlist,
