--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -23,6 +23,7 @@ extra-tmp-files:    config.status, config.log,
 
 library
   exposed-modules:  Control.Monad.ToIO,
+                    XMMS2.Client,
                     XMMS2.Client.Bindings,
                     XMMS2.Client.Bindings.Types,
                     XMMS2.Client.Bindings.Types.Value,
@@ -38,6 +39,7 @@ library
                     XMMS2.Client.Bindings.Medialib,
                     XMMS2.Client.Bindings.Stats,
                     XMMS2.Client.Exception,
+                    XMMS2.Client.Connection,
                     XMMS2.Client.Types,
                     XMMS2.Client.Types.Value,
                     XMMS2.Client.Types.Coll,
