--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -24,6 +24,22 @@ extra-tmp-files:    config.status, config.log,
 library
   exposed-modules:  Control.Monad.ToIO,
                     XMMS2.Client,
+                    XMMS2.Client.Types,
+                    XMMS2.Client.Types.Value,
+                    XMMS2.Client.Types.Coll,
+                    XMMS2.Client.Types.Bin,
+                    XMMS2.Client.Types.List,
+                    XMMS2.Client.Types.Dict,
+                    XMMS2.Client.Types.Property,
+                    XMMS2.Client.Types.Data,
+                    XMMS2.Client.Exception,
+                    XMMS2.Client.Connection,
+                    XMMS2.Client.Result,
+                    XMMS2.Client.Coll,
+                    XMMS2.Client.Playback,
+                    XMMS2.Client.Playlist,
+                    XMMS2.Client.Medialib,
+                    XMMS2.Client.Stats,
                     XMMS2.Client.Bindings,
                     XMMS2.Client.Bindings.Types,
                     XMMS2.Client.Bindings.Types.Value,
@@ -37,35 +53,7 @@ library
                     XMMS2.Client.Bindings.Playback,
                     XMMS2.Client.Bindings.Playlist,
                     XMMS2.Client.Bindings.Medialib,
-                    XMMS2.Client.Bindings.Stats,
-                    XMMS2.Client.Exception,
-                    XMMS2.Client.Connection,
-                    XMMS2.Client.Types,
-                    XMMS2.Client.Types.Value,
-                    XMMS2.Client.Types.Coll,
-                    XMMS2.Client.Types.Bin,
-                    XMMS2.Client.Types.List,
-                    XMMS2.Client.Types.Dict,
-                    XMMS2.Client.Types.Property,
-                    XMMS2.Client.Types.Data,
-                    XMMS2.Client.Result,
-                    XMMS2.Client.Coll,
-                    XMMS2.Client.Playback,
-                    XMMS2.Client.Playlist,
-                    XMMS2.Client.Medialib,
-                    XMMS2.Client.Stats,
-                    XMMS2.Client.Monad,
-                    XMMS2.Client.Monad.Utils,
-                    XMMS2.Client.Monad.Monad,
-                    XMMS2.Client.Monad.XMMS,
-                    XMMS2.Client.Monad.Value,
-                    XMMS2.Client.Monad.Result,
-                    XMMS2.Client.Monad.Connection,
-                    XMMS2.Client.Monad.Playlist,
-                    XMMS2.Client.Monad.Playback,
-                    XMMS2.Client.Monad.Medialib,
-                    XMMS2.Client.Monad.Coll,
-                    XMMS2.Client.Monad.Stats
+                    XMMS2.Client.Bindings.Stats
   other-modules:    C2HS,
                     XMMS2.Utils
   c-sources:		src/c/xmms2hs-client.c
