--- a/client-glib/xmms2-client-glib.cabal
+++ b/client-glib/xmms2-client-glib.cabal
@@ -4,7 +4,7 @@ version:            0.0.2.0
 author:             Oleg Belozeorov
 maintainer:         Oleg Belozeorov <upwawet@gmail.com>
 copyright:          (C) 2009-2010 Oleg Belozeorov
-license:            OtherLicense
+license:            LGPL-3
 license-file:       COPYING
 
 category:           Sound
