--- a/client-glib/xmms2-client-glib.cabal
+++ b/client-glib/xmms2-client-glib.cabal
@@ -16,7 +16,8 @@ description:
 cabal-version:      >= 1.2
 build-type:         Simple
 extra-tmp-files:    config.status, config.log,
-                    xmms2-client-glib.buildinfo, C2HS.hs
+                    xmms2-client-glib.buildinfo, C2HS.hs,
+                    hlint.out
 
 library
   exposed-modules:  XMMS2.Client.Glib
