--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -19,7 +19,8 @@ cabal-version:      >= 1.2
 build-type:         Simple
 extra-source-files: src/XMMS2/Client/xmms2hs-client.h
 extra-tmp-files:    config.status, config.log,
-                    xmms2-client.buildinfo, C2HS.hs
+                    xmms2-client.buildinfo, C2HS.hs,
+                    hlint.out
 
 library
   exposed-modules:  Control.Monad.ToIO,
