--- a/client-glib/xmms2-client-glib.cabal
+++ b/client-glib/xmms2-client-glib.cabal
@@ -13,7 +13,7 @@ description:
   This package provides an interface to the X-platform Music Multiplexing
   System 2 (http://xmms2.xmms.se) client GLib integration API.
 
-cabal-version:      >= 1.2
+cabal-version:      >= 1.6
 build-type:         Simple
 extra-tmp-files:    config.status, config.log,
                     xmms2-client-glib.buildinfo, C2HS.hs,
@@ -22,7 +22,7 @@ extra-tmp-files:    config.status, config.log,
 library
   exposed-modules:  XMMS2.Client.Glib
   other-modules:    C2HS
-  build-depends:    base, haskell98, xmms2-client == 0.0.3.8
+  build-depends:    base >= 4 && < 5, haskell98, xmms2-client == 0.0.3.8
   build-tools:      c2hs
   hs-source-dirs:   ., src
   extensions:       ForeignFunctionInterface
