--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -15,9 +15,9 @@ description:
   clients in Haskell. It contains (nearly) 1-to-1 bindings to the XMMS2
   client API and a higher level interface.
 
-cabal-version:      >= 1.2
+cabal-version:      >= 1.6
 build-type:         Simple
-extra-source-files: src/XMMS2/Client/xmms2hs-client.h
+extra-source-files: src/c/xmms2hs-client.h
 extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs,
                     hlint.out
@@ -59,7 +59,7 @@ library
                     XMMS2.Utils
   c-sources:		src/c/xmms2hs-client.c
   include-dirs:		src/c
-  build-depends:	base, haskell98, utf8-string, mtl, containers
+  build-depends:	base >= 4 && < 5, haskell98, utf8-string, mtl, containers
   build-tools:		c2hs
   hs-source-dirs:   ., src
   extensions:       ForeignFunctionInterface,
@@ -73,8 +73,7 @@ library
                     EmptyDataDecls,
                     FlexibleContexts,
                     ScopedTypeVariables,
-                    OverlappingInstances,
-                    TupleSections
+                    OverlappingInstances
 
 
 source-repository head
