--- a/client/xmms2-client.cabal
+++ b/client/xmms2-client.cabal
@@ -17,7 +17,21 @@ description:
 
 cabal-version:      >= 1.6
 build-type:         Simple
-extra-source-files: src/c/xmms2hs-client.h
+extra-source-files: xmms2-client.buildinfo.in,
+                    src/c/xmms2hs-client.h,
+                    configure.ac,
+                    configure,
+                    aclocal.m4,
+                    src/Makefile.in,
+                    src/XMMS2/Makefile.in,
+                    src/XMMS2/Client/Bindings/Makefile.in,
+                    src/XMMS2/Client/Bindings/Types/Makefile.in,
+                    src/XMMS2/Client/Makefile.in,
+                    src/XMMS2/Client/Types/Makefile.in,
+                    src/Control/Makefile.in,
+                    src/Control/Monad/Makefile.in,
+                    Makefile.in
+
 extra-tmp-files:    config.status, config.log,
                     xmms2-client.buildinfo, C2HS.hs,
                     hlint.out
