--- a/client-glib/xmms2-client-glib.cabal
+++ b/client-glib/xmms2-client-glib.cabal
@@ -24,13 +24,12 @@ extra-source-files: xmms2-client-glib.buildinfo.in,
                     src/XMMS2/Client/Makefile.in,
                     Makefile.in
 extra-tmp-files:    config.status, config.log,
-                    xmms2-client-glib.buildinfo, C2HS.hs,
-                    hlint.out
+                    xmms2-client-glib.buildinfo, hlint.out
 
 library
   exposed-modules:  XMMS2.Client.Glib
   other-modules:    C2HS
-  build-depends:    base >= 4 && < 5, haskell98, xmms2-client == 0.0.7.0
+  build-depends:    base >= 4 && < 5, xmms2-client == 0.0.7.0
   build-tools:      c2hs
   hs-source-dirs:   ., src
   extensions:       ForeignFunctionInterface
